move hide details in summary button in mobile to prevent overlap when edit item

--- a/src/app/itinerary/itinerary-summary/itinerary-summary.component.scss
+++ b/src/app/itinerary/itinerary-summary/itinerary-summary.component.scss
@@ -214,7 +214,8 @@
   }
 
   @media only screen and (max-width: 420px) {
-    bottom: 10px;
+    position: fixed;
+    bottom: 5px;
     right: 0;
     width: 100px;
     padding: 12px 0;
@@ -222,6 +223,7 @@
     background-color: #E6E6E6;
     border-radius: 10px 0 0 10px;
     z-index: 1000;
+    // opacity: .5;
   }
 }
 
